http-liveness.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: liveness
  name: liveness-http
spec:
  containers:
  - name: liveness
    image: marvinvaucanson/k8s-microproject
    # args:
    # - liveness
    livenessProbe:
      httpGet:
        scheme: HTTPS
        path: /
        port: 443
        httpHeaders:
        - name: Custom-Header
          value: Awesome
      initialDelaySeconds: 20
      periodSeconds: 6
