liveness-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: liveness-http-service
spec:
  type: LoadBalancer
  selector:
    test: liveness
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8080
