service.yaml
apiVersion : v1
kind: Service
metadata :
    name : k8s-microproject-service
spec:
    type: NodePort
    selector : 
        app : k8s-microproject
    ports: 
        - protocol : TCP
          port : 443
          targetPort : 8080
          nodePort : 30036
